add day/night icon

--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,20 @@ body {
   left: 0;
   outline: none;
 }
+
+.day-night-button {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.day-night-button .icon {
+  width: 20px;
+  height: 20px;
+}
