--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,52 @@ body {
   width: 20px;
   height: 20px;
 }
+
+.outer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-family: Helvetica;
+  color: rgb(131, 48, 240);
+}
+
+.name {
+  font-size: clamp(40px, 8vw, 100px);
+}
+
+.link-icons {
+  height: 15vh;
+  width: 100vw;
+  text-align: center;
+  vertical-align: bottom;
+  display: table-cell;
+}
+
+.link-icons .link-icon {
+  height: clamp(20px, 4vh, 100px);
+  width: clamp(20px, 4vh, 100px);
+  margin-left: 2.5vw;
+  margin-right: 2.5vw;
+}
+
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
